--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-read-more-less": "^0.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node public/main.js"
   },
   "eslintConfig": {
     "extends": "react-app"
