--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,12 +1,11 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
-  # This line should *not* be indented
+  branch: main # Branch to update (optional; defaults to master)
 media_folder: "public/static/img" # Media files will be stored in the repo under images/uploads
 public_folder: "/images" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
-  - name: "bugudon/admin" # Used in routes, e.g., /admin/collections/blog
+  - name: "bugudon" # Used in routes, e.g., /admin/collections/blog
     label: "Bugudon Admin" # Used in the UI
     folder: "src/content" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
