--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 media_folder: "public/static/img" # Media files will be stored in the repo under images/uploads
-public_folder: "/images" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "public/static/img" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "bugudon" # Used in routes, e.g., /admin/collections/blog
@@ -18,13 +18,13 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
 
   - name: "bugudon2" # Used in routes, e.g., /admin/collections/blog
-  label: "Bugudon test" # Used in the UI
-  folder: "src/content" # The path to the folder where the documents are stored
-  create: false # Allow users to create new documents in this collection
-  slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-  fields: # The fields for each document, usually in front matter
-    - {label: "Title", name: "title", widget: "string"}
-    - {label: "Author", name: "author", widget: "string"}
-    - {label: "Publish Date", name: "date", widget: "datetime"}
-    - {label: "Featured Image", name: "thumbnail", widget: "image"}
-    - {label: "Body", name: "body", widget: "markdown"}
+    label: "Bugudon test" # Used in the UI
+    folder: "src/content" # The path to the folder where the documents are stored
+    create: false # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "author", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Body", name: "body", widget: "markdown"}
