--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node public/main.js &&react-scripts start",
     "build": "node public/main.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
