--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,12 +17,13 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
 
-  - name: "Carousel" # Used in routes, e.g., /admin/collections/blog
+  - name: "Homepage/Carousel" # Used in routes, e.g., /admin/collections/blog
     label: "Homepage Carousel Top" # Used in the UI
     folder: "src/pagecontent/HomeCarouselTop" # The path to the folder where the documents are stored
     create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
+      - {label: "Text", name: "test", widget: "string"}
       - {label: "Image 1", name: "image1", widget: "image"}
       - {label: "Image 2", name: "image2", widget: "image"}
       - {label: "Image 3", name: "image3", widget: "image"}
