--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,9 +17,9 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
 
-  - name: "Homepage/Carousel" # Used in routes, e.g., /admin/collections/blog
+  - name: "Homepage Carousel" # Used in routes, e.g., /admin/collections/blog
     label: "Homepage Carousel Top" # Used in the UI
-    folder: "src/pagecontent/HomeCarouselTop" # The path to the folder where the documents are stored
+    folder: "src/pagecontent/homeCarouselTop" # The path to the folder where the documents are stored
     create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
