--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -27,4 +27,5 @@ collections:
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Image One", name: "image1", widget: "image"}
+      - {label: "Image Two", name: "image2", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
