--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -23,9 +23,9 @@ collections:
     create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Title", name: "title", widget: "string", default: "images"}
       - {label: "Image One", name: "image1", widget: "image"}
       - {label: "Image Two", name: "image2", widget: "image"}
       - {label: "Image Three", name: "image3", widget: "image"}
+      - {label: "Vision under images", name: "vision", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
