--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 media_folder: "public/static/img" # Media files will be stored in the repo under images/uploads
-public_folder: "public/static/img" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "static/img" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "bugudon" # Used in routes, e.g., /admin/collections/blog
