--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -36,5 +36,5 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Read More text", name: "readMoreText:", widget: "string"}
+      - {label: "Read More text", name: "readMoreText", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
