Update Homepage investors section with CMS info

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -38,3 +38,14 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Read More text", name: "readMoreText", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+  - name: "HomepageInvestors" # Used in routes, e.g., /admin/collections/blog
+    label: "Homepage Investor section" # Used in the UI
+    folder: "src/pagecontent/HomeInvestors" # The path to the folder where the documents are stored
+    create: false # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Help Text", name: "helpText", widget: "string"}
+      - {label: "Image", name: "image", widget: "image", default: "ghana.png"}
+      - {label: "Body", name: "body", widget: "markdown"}
